--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
+
+    <meta property="URL" content="./icons/original-code-icon.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Afonso Silva" />
+    <meta property="og:description" content="lorem ipsum" />
+    <meta property="og:image" content="./icons/original-code-icon.png" />
+
+    <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
